[gd_scene load_steps=8 format=3 uid="uid://bwa30ox5nmgq7"]

[ext_resource type="Script" path="res://Scenes/TradingChest/TradingChest.gd" id="1_l7t0c"]
[ext_resource type="Texture2D" uid="uid://bhjytby2ycvpn" path="res://Assets/Sourced/Sprout Lands/Objects/Chest.png" id="1_tli8s"]

[sub_resource type="Animation" id="Animation_guclc"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wrxhp"]
resource_name = "Opening"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_roa3l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rv4ab"]
_data = {
"Idle": SubResource("Animation_guclc"),
"Opening": SubResource("Animation_wrxhp"),
"RESET": SubResource("Animation_roa3l")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikv6r"]
size = Vector2(80, 80)

[node name="TradingChest" type="Node2D"]
script = ExtResource("1_l7t0c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_tli8s")
hframes = 5
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rv4ab")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ikv6r")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
